# pydantic-google-secrets

./: .bumpversion.cfg  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  README.rst  pyproject.toml  tasks.py
.github/: ISSUE_TEMPLATE.md
docs/: conf.py  index.rst  installation.rst  usage.rst
pydantic_google_secrets/: __init__.py
tests/: __init__.py  test_pydantic_google_secrets.py
