[tool]
[tool.poetry]
name = "pydantic_google_secrets"
version = "0.1.0"
homepage = "https://github.com/BobcatProgrammer/pydantic_google_secrets"
description = "Top-level package for Pydantic Google Secrets."
authors = ["Simon Trockel <github@bobcat.cloud>"]
readme = "README.rst"
license =  "MIT"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
]
packages = [
    { include = "pydantic_google_secrets" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = "*"

[tool.poetry.dev-dependencies]
bumpversion = "*"
coverage = "*"
flake8 = "*"
invoke = "*"
isort = "*"
pylint = "*"
pytest = "*"
sphinx = "*"
tox = "*"
yapf = "*"



[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
